--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "sass": "^1.38.0"
   },
   "scripts": {
     "start": "react-scripts start",
