--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-  "bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.2"
+    "mongoose": "^6.1.2",
+    "morgan": "^1.10.0"
   }
 }
