--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
     "react-scripts": "^5.0.0",
+    "reactjs-popup": "^2.0.5",
     "sass": "^1.45.0",
     "web-vitals": "^1.0.1",
     "webpack": "^4.44.2",
